Logica degli ingredienti extra fatta bene, immagini per bevande e ingredienti, tanti fix vari